output/whileParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g 2023-12-30 14:57:25

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class whileParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Node_Bloc", "Node_Exprlist", "Node_Output", "Node_Input", "Node_ForEach", "Node_For", "Node_While", "Node_If", "Node_Else", "Node_Affectation", "Node_Params", "Node_Function", "Node_Left", "Node_Right", "Node_Call", "Node_Head", "Node_Tail", "Node_Cons", "Node_List", "Maj", "Min", "Dec", "Variable", "Symbol", "WS", "'function'", "':'", "'read'", "'%'", "'write'", "','", "';'", "'foreach'", "'in'", "'do'", "'od'", "'for'", "'while'", "'if'", "'then'", "'else'", "'fi'", "'nop'", "':='", "'('", "')'", "'hd'", "'tl'", "'cons'", "'list'", "'nil'", "'=?'"
    };
    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int Node_Bloc=4;
    public static final int Node_Exprlist=5;
    public static final int Node_Output=6;
    public static final int Node_Input=7;
    public static final int Node_ForEach=8;
    public static final int Node_For=9;
    public static final int Node_While=10;
    public static final int Node_If=11;
    public static final int Node_Else=12;
    public static final int Node_Affectation=13;
    public static final int Node_Params=14;
    public static final int Node_Function=15;
    public static final int Node_Left=16;
    public static final int Node_Right=17;
    public static final int Node_Call=18;
    public static final int Node_Head=19;
    public static final int Node_Tail=20;
    public static final int Node_Cons=21;
    public static final int Node_List=22;
    public static final int Maj=23;
    public static final int Min=24;
    public static final int Dec=25;
    public static final int Variable=26;
    public static final int Symbol=27;
    public static final int WS=28;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "commands", "definition", "exprs", "vars", "output", 
        "lExpr", "function", "input", "expression", "exprBase", "program", 
        "inputSub", "command"
    };
    public static final boolean[] decisionCanBacktrack = new boolean[] {
        false, // invalid decision
        false, false, false, false, false, false, false, false, false, 
            false, false, false, false, false, false, false, false, false
    };

     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public whileParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public whileParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public whileParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return whileParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:53:1: program : function ( program )? ;
    public final whileParser.program_return program() throws RecognitionException {
        whileParser.program_return retval = new whileParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        whileParser.function_return function1 = null;

        whileParser.program_return program2 = null;



        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(53, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:54:2: ( function ( program )? )
            dbg.enterAlt(1);

            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:54:4: function ( program )?
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(54,4);
            pushFollow(FOLLOW_function_in_program261);
            function1=function();

            state._fsp--;

            adaptor.addChild(root_0, function1.getTree());
            dbg.location(54,13);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:54:13: ( program )?
            int alt1=2;
            try { dbg.enterSubRule(1);
            try { dbg.enterDecision(1, decisionCanBacktrack[1]);

            int LA1_0 = input.LA(1);

            if ( (LA1_0==29) ) {
                alt1=1;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:54:13: program
                    {
                    dbg.location(54,13);
                    pushFollow(FOLLOW_program_in_program263);
                    program2=program();

                    state._fsp--;

                    adaptor.addChild(root_0, program2.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(1);}


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(54, 22);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "program"

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:55:1: function : 'function' Symbol ':' ( WS )* definition -> ^( Node_Function Symbol definition ) ;
    public final whileParser.function_return function() throws RecognitionException {
        whileParser.function_return retval = new whileParser.function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal3=null;
        Token Symbol4=null;
        Token char_literal5=null;
        Token WS6=null;
        whileParser.definition_return definition7 = null;


        Object string_literal3_tree=null;
        Object Symbol4_tree=null;
        Object char_literal5_tree=null;
        Object WS6_tree=null;
        RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");
        try { dbg.enterRule(getGrammarFileName(), "function");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(55, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:56:2: ( 'function' Symbol ':' ( WS )* definition -> ^( Node_Function Symbol definition ) )
            dbg.enterAlt(1);

            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:56:4: 'function' Symbol ':' ( WS )* definition
            {
            dbg.location(56,4);
            string_literal3=(Token)match(input,29,FOLLOW_29_in_function274);  
            stream_29.add(string_literal3);

            dbg.location(56,15);
            Symbol4=(Token)match(input,Symbol,FOLLOW_Symbol_in_function276);  
            stream_Symbol.add(Symbol4);

            dbg.location(56,22);
            char_literal5=(Token)match(input,30,FOLLOW_30_in_function278);  
            stream_30.add(char_literal5);

            dbg.location(56,26);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:56:26: ( WS )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==WS) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:56:26: WS
            	    {
            	    dbg.location(56,26);
            	    WS6=(Token)match(input,WS,FOLLOW_WS_in_function280);  
            	    stream_WS.add(WS6);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(56,30);
            pushFollow(FOLLOW_definition_in_function283);
            definition7=definition();

            state._fsp--;

            stream_definition.add(definition7.getTree());


            // AST REWRITE
            // elements: definition, Symbol
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:42: -> ^( Node_Function Symbol definition )
            {
                dbg.location(56,45);
                // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:56:45: ^( Node_Function Symbol definition )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(56,47);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Node_Function, "Node_Function"), root_1);

                dbg.location(56,62);
                adaptor.addChild(root_1, stream_Symbol.nextNode());
                dbg.location(56,70);
                adaptor.addChild(root_1, stream_definition.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(56, 82);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "function");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "function"

    public static class definition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "definition"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:58:1: definition : 'read' input ( WS )* '%' commands '%' ( WS )* 'write' output ( WS )* -> input commands output ;
    public final whileParser.definition_return definition() throws RecognitionException {
        whileParser.definition_return retval = new whileParser.definition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal8=null;
        Token WS10=null;
        Token char_literal11=null;
        Token char_literal13=null;
        Token WS14=null;
        Token string_literal15=null;
        Token WS17=null;
        whileParser.input_return input9 = null;

        whileParser.commands_return commands12 = null;

        whileParser.output_return output16 = null;


        Object string_literal8_tree=null;
        Object WS10_tree=null;
        Object char_literal11_tree=null;
        Object char_literal13_tree=null;
        Object WS14_tree=null;
        Object string_literal15_tree=null;
        Object WS17_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
        RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try { dbg.enterRule(getGrammarFileName(), "definition");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(58, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:2: ( 'read' input ( WS )* '%' commands '%' ( WS )* 'write' output ( WS )* -> input commands output )
            dbg.enterAlt(1);

            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:4: 'read' input ( WS )* '%' commands '%' ( WS )* 'write' output ( WS )*
            {
            dbg.location(59,4);
            string_literal8=(Token)match(input,31,FOLLOW_31_in_definition309);  
            stream_31.add(string_literal8);

            dbg.location(59,11);
            pushFollow(FOLLOW_input_in_definition311);
            input9=input();

            state._fsp--;

            stream_input.add(input9.getTree());
            dbg.location(59,17);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:17: ( WS )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:17: WS
            	    {
            	    dbg.location(59,17);
            	    WS10=(Token)match(input,WS,FOLLOW_WS_in_definition313);  
            	    stream_WS.add(WS10);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(59,21);
            char_literal11=(Token)match(input,32,FOLLOW_32_in_definition316);  
            stream_32.add(char_literal11);

            dbg.location(59,25);
            pushFollow(FOLLOW_commands_in_definition318);
            commands12=commands();

            state._fsp--;

            stream_commands.add(commands12.getTree());
            dbg.location(59,34);
            char_literal13=(Token)match(input,32,FOLLOW_32_in_definition320);  
            stream_32.add(char_literal13);

            dbg.location(59,38);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:38: ( WS )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4, decisionCanBacktrack[4]);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==WS) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:38: WS
            	    {
            	    dbg.location(59,38);
            	    WS14=(Token)match(input,WS,FOLLOW_WS_in_definition322);  
            	    stream_WS.add(WS14);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}

            dbg.location(59,42);
            string_literal15=(Token)match(input,33,FOLLOW_33_in_definition325);  
            stream_33.add(string_literal15);

            dbg.location(59,50);
            pushFollow(FOLLOW_output_in_definition327);
            output16=output();

            state._fsp--;

            stream_output.add(output16.getTree());
            dbg.location(59,57);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:57: ( WS )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==WS) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:59:57: WS
            	    {
            	    dbg.location(59,57);
            	    WS17=(Token)match(input,WS,FOLLOW_WS_in_definition329);  
            	    stream_WS.add(WS17);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}



            // AST REWRITE
            // elements: output, input, commands
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:61: -> input commands output
            {
                dbg.location(59,64);
                adaptor.addChild(root_0, stream_input.nextTree());
                dbg.location(59,70);
                adaptor.addChild(root_0, stream_commands.nextTree());
                dbg.location(59,79);
                adaptor.addChild(root_0, stream_output.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(59, 85);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "definition");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "definition"

    public static class input_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "input"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:60:1: input : ( inputSub )? -> ^( Node_Input ( inputSub )? ) ;
    public final whileParser.input_return input() throws RecognitionException {
        whileParser.input_return retval = new whileParser.input_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        whileParser.inputSub_return inputSub18 = null;


        RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
        try { dbg.enterRule(getGrammarFileName(), "input");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(60, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:2: ( ( inputSub )? -> ^( Node_Input ( inputSub )? ) )
            dbg.enterAlt(1);

            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:5: ( inputSub )?
            {
            dbg.location(61,5);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:5: ( inputSub )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==Variable) ) {
                alt6=1;
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:5: inputSub
                    {
                    dbg.location(61,5);
                    pushFollow(FOLLOW_inputSub_in_input350);
                    inputSub18=inputSub();

                    state._fsp--;

                    stream_inputSub.add(inputSub18.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}



            // AST REWRITE
            // elements: inputSub
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 61:15: -> ^( Node_Input ( inputSub )? )
            {
                dbg.location(61,17);
                // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:17: ^( Node_Input ( inputSub )? )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(61,19);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Node_Input, "Node_Input"), root_1);

                dbg.location(61,30);
                // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:61:30: ( inputSub )?
                if ( stream_inputSub.hasNext() ) {
                    dbg.location(61,30);
                    adaptor.addChild(root_1, stream_inputSub.nextTree());

                }
                stream_inputSub.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(61, 40);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "input");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "input"

    public static class inputSub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inputSub"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:62:1: inputSub : Variable ( ',' Variable )* -> ( Variable )+ ;
    public final whileParser.inputSub_return inputSub() throws RecognitionException {
        whileParser.inputSub_return retval = new whileParser.inputSub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable19=null;
        Token char_literal20=null;
        Token Variable21=null;

        Object Variable19_tree=null;
        Object char_literal20_tree=null;
        Object Variable21_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");

        try { dbg.enterRule(getGrammarFileName(), "inputSub");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(62, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:63:2: ( Variable ( ',' Variable )* -> ( Variable )+ )
            dbg.enterAlt(1);

            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:63:4: Variable ( ',' Variable )*
            {
            dbg.location(63,4);
            Variable19=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub368);  
            stream_Variable.add(Variable19);

            dbg.location(63,13);
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:63:13: ( ',' Variable )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7, decisionCanBacktrack[7]);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==34) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:63:14: ',' Variable
            	    {
            	    dbg.location(63,14);
            	    char_literal20=(Token)match(input,34,FOLLOW_34_in_inputSub371);  
            	    stream_34.add(char_literal20);

            	    dbg.location(63,18);
            	    Variable21=(Token)match(input,Variable,FOLLOW_Variable_in_inputSub373);  
            	    stream_Variable.add(Variable21);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}



            // AST REWRITE
            // elements: Variable
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:28: -> ( Variable )+
            {
                dbg.location(63,31);
                if ( !(stream_Variable.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_Variable.hasNext() ) {
                    dbg.location(63,31);
                    adaptor.addChild(root_0, stream_Variable.nextNode());

                }
                stream_Variable.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(63, 42);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "inputSub");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "inputSub"

    public static class output_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "output"
    // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:64:1: output : Variable ( ',' Variable )* -> ^( Node_Output ( Variable )+ ) ;
    public final whileParser.output_return output() throws RecognitionException {
        whileParser.output_return retval = new whileParser.output_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Variable22=null;
        Token char_literal23=null;
        Token Variable24=null;

        Object Variable22_tree=null;
        Object char_literal23_tree=null;
        Object Variable24_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_Variable=new RewriteRuleTokenStream(adaptor,"token Variable");

        try { dbg.enterRule(getGrammarFileName(), "output");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(64, 1);

        try {
            // C:\\Users\\slh35\\Documents\\COURS\\ESIR2\\SEMESTRE 1\\TLC\\TP\\compiler-while\\while.g:65:2: ( Variable ( ',' Variable )* -> ^( Node_Output ( Variable )+ ) )
            dbg.enterAlt(1);
